# flowscope

./: .eslintrc.js  .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-CHANGE.md  PHASE_0_SPIKE_RESULTS.md  QUICKSTART.md  README.md  SECURITY.md  TAGS.md  TODO.md  codecov.yml  eslint.config.js  justfile  package-lock.json  package.json  test-analyzer.mjs  test-namespace.sql  tsconfig.base.json
crates/flowscope-cli/: Cargo.toml  README.md  build.rs
crates/flowscope-cli/embedded-app/: index.html
crates/flowscope-cli/embedded-app/assets/: analysis.worker-QfMeVOBY.js  flowscope_wasm-CDMBKX1e.js  graphBuilder.worker-BuMepPt9.js  index-Bv3lsItv.css  layout.worker-DMJS7q_X.js  matrix.worker-saqsJv0f.js
crates/flowscope-cli/embedded-app/wasm/: flowscope_wasm_bg.wasm.d.ts
crates/flowscope-cli/src/: cli.rs  fix.rs  input.rs  lib.rs  main.rs  schema.rs
crates/flowscope-cli/src/metadata/: mod.rs  provider.rs  sqlx_provider.rs
crates/flowscope-cli/src/output/: json.rs  lint.rs  mermaid.rs  mod.rs  table.rs
crates/flowscope-cli/src/server/: api.rs  assets.rs  mod.rs  state.rs  watcher.rs
crates/flowscope-cli/tests/: export_cli.rs  lint_cli.rs  metadata_provider.rs  serve_api.rs  serve_integration.rs  template_cli.rs
crates/flowscope-cli/tests/integration/: main.rs  mysql.rs  postgres.rs  sqlite.rs
crates/flowscope-core/: Cargo.toml  README.md  build.rs
crates/flowscope-core/fuzz/: Cargo.toml
crates/flowscope-core/fuzz/fuzz_targets/: fuzz_analyze.rs  fuzz_parse.rs
crates/flowscope-core/specs/dialect-semantics/: README.md  dialect_behavior.toml  dialect_keywords.toml  dialect_specific_functions.toml  dialects.json  function_return_types.toml  functions.json  normalization_overrides.toml  scoping_rules.toml  table_generating_functions.toml  type_system.toml
crates/flowscope-core/src/: analyzer.rs  analyzer_dml.rs.tmp  completion.rs  error.rs  lib.rs  test_utils.rs  types.rs
crates/flowscope-core/src/analyzer/: complexity.rs  context.rs  cross_statement.rs  ddl.rs  diagnostics.rs  expression.rs  functions.rs  global.rs  helpers.rs  input.rs  query.rs  resolution.rs  schema_registry.rs  select.rs  select_analyzer.rs  statements.rs  tests.rs  transform.rs  visitor.rs
crates/flowscope-core/src/analyzer/helpers/: alias.rs  constraints.rs  id.rs  mod.rs  naming.rs  query.rs  span.rs  (+2 more)
crates/flowscope-core/src/completion/: ast_extractor.rs  context.rs  functions.rs  mod.rs  parse_strategies.rs
crates/flowscope-core/src/extractors/: mod.rs
crates/flowscope-core/src/lineage/: mod.rs
crates/flowscope-core/src/linter/: config.rs  document.rs  helpers.rs  mod.rs  rule.rs  visit.rs
crates/flowscope-core/src/parser/: mod.rs
crates/flowscope-core/src/templater/: dbt.rs  error.rs  jinja.rs  mod.rs
crates/flowscope-core/src/types/: common.rs  completion.rs  legacy.rs  mod.rs  request.rs  response.rs  serde_utils.rs
crates/flowscope-core/tests/: completion_items.rs  completion_snapshots.rs  golden.rs  helpers_naming.rs  lineage_engine.rs  linter.rs  property.rs  schema_guard.rs  scoping.rs  snapshots.rs  templating.rs
crates/flowscope-core/tests/common/: mod.rs
crates/flowscope-core/tests/snapshots/: completion_snapshots__snap_ambiguous_columns.snap  completion_snapshots__snap_cte_reference.snap  completion_snapshots__snap_duckdb_dialect.snap  completion_snapshots__snap_empty_schema.snap  completion_snapshots__snap_from_clause_tables.snap  completion_snapshots__snap_join_on_condition.snap  completion_snapshots__snap_keywords_order_by_clause.snap  completion_snapshots__snap_keywords_select_clause.snap  completion_snapshots__snap_keywords_where_clause.snap  completion_snapshots__snap_multi_statement.snap  completion_snapshots__snap_postgres_dialect.snap  completion_snapshots__snap_qualified_alias.snap  completion_snapshots__snap_qualified_schema.snap  completion_snapshots__snap_select_with_schema.snap  completion_snapshots__snap_three_way_join.snap  golden__golden_column_lineage_union_captures_outputs.snap  golden__golden_column_lineage_union_captures_outputs.snap.new  golden__golden_ctas_captures_target_columns.snap  golden__golden_imported_precedence_over_create_table.snap  golden__golden_imported_precedence_over_create_table.snap.new  golden__golden_inline_select_tables_only.snap  golden__golden_multi_file_keeps_sources.snap  golden__golden_multi_file_keeps_sources.snap.new  golden__golden_resolved_schema_with_imported_and_implied.snap  golden__golden_resolved_schema_with_imported_and_implied.snap.new  golden__golden_window_functions_emit_columns.snap  golden__golden_window_functions_emit_columns.snap.new  golden__imported_schema_preserves_qualified_names.snap  golden__imported_schema_preserves_qualified_names.snap.new  golden__imported_schema_resolves_via_default_schema.snap  golden__imported_schema_resolves_via_search_path_with_catalog.snap  snapshots__run_bigquery_snapshot_test@bigquery_hyphenated_refs.snap  snapshots__run_bigquery_snapshot_test@bigquery_hyphenated_refs_join.snap  snapshots__run_bigquery_snapshot_test@bigquery_select_except.snap  snapshots__run_bigquery_snapshot_test@bigquery_select_except_replace_combined.snap  snapshots__run_bigquery_snapshot_test@bigquery_select_replace.snap  snapshots__run_bigquery_snapshot_test@bigquery_unnest_basic.snap  snapshots__run_bigquery_snapshot_test@bigquery_unnest_with_offset.snap  snapshots__run_postgres_snapshot_test@postgres_array_slicing.snap  snapshots__run_postgres_snapshot_test@postgres_filter_clause.snap  (+16 more)
crates/flowscope-export/: Cargo.toml  README.md
crates/flowscope-export/src/: csv.rs  duckdb_backend.rs  error.rs  extract.rs  html.rs  json.rs  lib.rs  mermaid.rs  naming.rs  reserved-keywords.json  schema.rs  sql_backend.rs  writer.rs  xlsx.rs
crates/flowscope-export/tests/: export_formats.rs
crates/flowscope-wasm/: Cargo.toml  README.md
crates/flowscope-wasm/src/: encoding.rs  lib.rs
crates/flowscope-wasm/tests/: completion_items.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze.rs
(+313 files in other folders)
