[workspace]
members = [
    "crates/flowscope-core",
    "crates/flowscope-wasm",
    "crates/flowscope-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PondPilot Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pondpilot/flowscope"

[workspace.dependencies]
sqlparser = "0.59"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }
wasm-bindgen = "0.2"
