[package]
name = "flowscope-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
flowscope-core = { path = "../crates/flowscope-core", default-features = false }

[workspace]
members = []

[package.metadata]
cargo-fuzz = true

[profile.release]
debug = 1
