[package]
name = "flowscope-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://flowscope.pondpilot.io"
documentation = "https://docs.rs/flowscope-cli"
readme = "README.md"
keywords = ["sql", "lineage", "cli", "analysis", "database"]
categories = ["command-line-utilities", "database"]
description = "Command-line interface for FlowScope SQL lineage analyzer"

[[bin]]
name = "flowscope"
path = "src/main.rs"

[dependencies]
flowscope-core.workspace = true
flowscope-export.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
thiserror = "2.0"
tabled = "0.20"
owo-colors = "4"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3"
