[package]
name = "flowscope-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://flowscope.pondpilot.io"
documentation = "https://docs.rs/flowscope-cli"
readme = "README.md"
keywords = ["sql", "lineage", "cli", "analysis", "database"]
categories = ["command-line-utilities", "database"]
description = "Command-line interface for FlowScope SQL lineage analyzer"

[[bin]]
name = "flowscope"
path = "src/main.rs"

[dependencies]
flowscope-core.workspace = true
flowscope-export = { workspace = true, features = ["duckdb"] }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
thiserror = "2.0"
tabled = "0.20"
owo-colors = "4"
is-terminal = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = "0.32"

[features]
default = ["metadata-provider"]
metadata-provider = ["sqlx", "tokio"]
# Integration tests require database connectivity
integration-tests = ["metadata-provider"]
