[package]
name = "flowscope-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core SQL lineage analysis engine"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
sqlparser.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
rstest = "0.22"
proptest = "1.4"
insta = { version = "1.44.1", features = ["json"] }
