[package]
name = "flowscope-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core SQL lineage analysis engine"
build = "build.rs"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
sqlparser.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }

[build-dependencies]
toml = "0.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
rstest = "0.26"
proptest = "1.9"
insta = { version = "1.45", features = ["json"] }
