[package]
name = "flowscope-export"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database export for FlowScope analysis results"

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]

[dependencies]
flowscope-core = { path = "../flowscope-core" }
thiserror = "2.0"
duckdb = { version = "1.0", features = ["bundled"], optional = true }
chrono = "0.4"
tempfile = "3"

[dev-dependencies]
