[package]
name = "flowscope-export"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://flowscope.pondpilot.io"
documentation = "https://docs.rs/flowscope-export"
readme = "README.md"
keywords = ["sql", "lineage", "export", "duckdb", "database"]
categories = ["database"]
description = "Database export for FlowScope analysis results"

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]

[dependencies]
flowscope-core.workspace = true
thiserror = "2.0"
duckdb = { version = "1.0", features = ["bundled"], optional = true }
chrono = "0.4"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
