[package]
name = "flowscope-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for flowscope-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flowscope-core = { path = "../flowscope-core" }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
