[package]
name = "flowscope-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for flowscope-core"

[features]
default = []
tracing = ["flowscope-core/tracing", "tracing-wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flowscope-core = { path = "../flowscope-core", default-features = false }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-wasm = { version = "0.2", optional = true }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
